fixed aligning for desktop

--- a/style.css
+++ b/style.css
@@ -426,11 +426,14 @@ address {
 .featured-projects {
     display: flex;
     flex-direction: column;
+    justify-items: flex-start;
+    align-items: flex-start;
 }
 
 .project {
     display: flex;
     flex-direction: row;  
+    
 }
 
 .buttons {
@@ -588,7 +591,6 @@ address, .some-icon {
 .featured-projects {
     display: flex;
     flex-direction: column;
-    justify-items: center;
     align-items: center;
     padding: 0px;
     margin: 120px 120px 0 120px;
@@ -597,7 +599,6 @@ address, .some-icon {
 .project {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: flex-start;
     width: 60%;
 }
